# vue-oxlint-toolkit

./: .gitattributes  .gitignore  ADJUST.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  MAPPING.md  PROMPT.md  README.md  bump.config.ts  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.vite-hooks/: pre-commit
benchmark/: Cargo.toml
benchmark/benches/: jsx.rs  parse.rs
crates/vue_oxlint_jsx/: Cargo.toml  MAPPING.md  README.md
crates/vue_oxlint_jsx/fixtures/: codegen.vue  root_texts.vue  void.vue
crates/vue_oxlint_jsx/fixtures/directive/: basic.vue  v-if-error.vue
crates/vue_oxlint_jsx/fixtures/error/: script.vue  template.vue
crates/vue_oxlint_jsx/fixtures/modules/: basic.vue
crates/vue_oxlint_jsx/fixtures/scripts/: basic.vue  codegen_fidelity.vue  directive_prologue.vue  directives.vue
crates/vue_oxlint_jsx/src/: codegen.rs  irregular_whitespaces.rs  lib.rs  test.rs
crates/vue_oxlint_jsx/src/codegen/: mod.rs
crates/vue_oxlint_jsx/src/codegen/oxc/: binary_expr_visitor.rs  gen.rs  lib.rs  str.rs
crates/vue_oxlint_jsx/src/parser/: codegen.rs  error.rs  interface.rs  irregular_whitespaces.rs  mod.rs  modules.rs  parse.rs  script.rs
crates/vue_oxlint_jsx/src/parser/elements/: directive.rs  mod.rs  v_for.rs  v_if.rs  v_slot.rs
crates/vue_oxlint_jsx/src/parser/snapshots/ast/: basic_vue.snap  comments_vue.snap  components_vue.snap  directive_basic_vue.snap  directive_v-for-error_vue.snap  directive_v-for_vue.snap  directive_v-if-error_vue.snap  directive_v-if_vue.snap  directive_v-slot_vue.snap  error_directive_vue.snap  error_empty_multiple_scripts_vue.snap  error_interpolation_vue.snap  error_multiple_langs_vue.snap  error_multiple_scripts_vue.snap  error_script_vue.snap  error_template_vue.snap  root_texts_vue.snap  scripts_basic_vue.snap  scripts_both_vue.snap  scripts_directives_vue.snap  scripts_empty_vue.snap  scripts_setup_vue.snap  tags_vue.snap  typescript_vue.snap  void_vue.snap
crates/vue_oxlint_jsx/src/parser/snapshots/module_record/: modules_basic_vue.snap  modules_import_vue.snap  modules_no-imports_vue.snap  modules_setup_vue.snap
crates/vue_oxlint_jsx/src/test/: codegen.rs  mod.rs
crates/vue_oxlint_jsx/src/test/snapshots/ast/: basic_vue.snap  comments_vue.snap  components_vue.snap  directive_basic_vue.snap  directive_v-for-error_vue.snap  directive_v-for_vue.snap  directive_v-if-error_vue.snap  directive_v-if_vue.snap  directive_v-slot_vue.snap  error_directive_vue.snap  error_empty_multiple_scripts_vue.snap  error_interpolation_vue.snap  error_multiple_langs_vue.snap  error_script_vue.snap  error_void_vue.snap  panic_multiple_scripts_vue.snap  panic_template_vue.snap  pass_components_vue.snap  pass_directive_v-for_vue.snap  pass_directive_v-pre-attribute-order_vue.snap  pass_directive_v-pre_vue.snap  pass_directive_v-slot_vue.snap  pass_modules_basic_vue.snap  pass_modules_import_vue.snap  pass_modules_no-imports_vue.snap  pass_modules_setup_vue.snap  pass_scripts_both_vue.snap  pass_scripts_directive_prologue_vue.snap  pass_scripts_directives_vue.snap  pass_scripts_mapping_vue.snap  pass_special_template_tokens_vue.snap  pass_typescript_vue.snap  root_texts_vue.snap  scripts_basic_vue.snap  scripts_both_vue.snap  scripts_codegen_fidelity_vue.snap  scripts_directives_vue.snap  scripts_empty_vue.snap  scripts_setup_vue.snap  tags_vue.snap  (+2 more)
crates/vue_oxlint_jsx/src/test/snapshots/codegen/: basic_vue.snap  codegen_vue.snap  comments_vue.snap  components_vue.snap  directive_basic_vue.snap  directive_v-for-error_vue.snap  directive_v-for_vue.snap  directive_v-if-error_vue.snap  directive_v-if_vue.snap  directive_v-slot_vue.snap  error_directive_vue.snap  error_empty_multiple_scripts_vue.snap  error_script_vue.snap  modules_basic_vue.snap  modules_import_vue.snap  modules_no-imports_vue.snap  modules_setup_vue.snap  pass_comments_vue.snap  pass_directive_v-if_vue.snap  pass_directive_v-pre-attribute-order_vue.snap  pass_directive_v-pre_vue.snap  pass_modules_basic_vue.snap  pass_modules_import_vue.snap  pass_modules_no-imports_vue.snap  pass_modules_setup_vue.snap  pass_root_texts_vue.snap  pass_scripts_basic_vue.snap  pass_scripts_codegen_fidelity_vue.snap  pass_scripts_directive_prologue_vue.snap  pass_scripts_empty_vue.snap  pass_scripts_mapping_vue.snap  pass_special_template_tokens_vue.snap  pass_tags_vue.snap  pass_typescript_vue.snap  root_texts_vue.snap  scripts_basic_vue.snap  scripts_both_vue.snap  scripts_codegen_fidelity_vue.snap  scripts_directives_vue.snap  scripts_empty_vue.snap  (+5 more)
crates/vue_oxlint_jsx/src/test/snapshots/module_record/: modules_basic_vue.snap  modules_import_vue.snap  modules_no-imports_vue.snap  modules_setup_vue.snap
crates/vue_oxlint_parser/: Cargo.toml  README.md
crates/vue_oxlint_parser/src/: ast.rs  error.rs  expr.rs  irregular_whitespaces.rs  lexer.rs  lib.rs  parser.rs  sfc.rs  template.rs
crates/vue_oxlint_parser/src/ast/: bindings.rs  comments.rs  expr.rs  mod.rs  token.rs
crates/vue_oxlint_parser/src/ast/bindings/: mod.rs
crates/vue_oxlint_parser/src/ast/nodes/: attribute.rs  directive.rs  elements.rs  javascript.rs  mod.rs
crates/vue_oxlint_parser/src/lexer/: cursor.rs  data.rs  mod.rs  scan.rs  tag.rs  text.rs  tokens.rs  utils.rs
crates/vue_oxlint_parser/src/parser/: attr.rs  attribute.rs  element.rs  expression.rs  irregular_whitespaces.rs  mod.rs  module_record.rs  oxc_parse.rs  script.rs  sfc.rs  template.rs
crates/vue_oxlint_parser/src/parser/lexer/: mod.rs
crates/vue_oxlint_parser/src/parser/parse/: attributes.rs  children.rs  directives.rs  element.rs  elements.rs  emit.rs  expressions.rs  mod.rs  state.rs  utils.rs  variables.rs
crates/vue_oxlint_parser/tests/: ast_fixtures.rs
crates/vue_oxlint_parser/tests/fixtures/: expected-failures.txt
crates/vue_oxlint_parser/tests/fixtures/ast/define-model01-eslint-v10/: ast.json
crates/vue_oxlint_parser/tests/fixtures/ast/define-model05-with-modifiers-eslint-v10/: ast.json
crates/vue_oxlint_parser/tests/fixtures/ast/end-of-line02-eslint-v10/: ast.json
rfcs/: clean-codegen-mapping.md  (+2 more)
(+85 files in other folders)
