[workspace]
resolver = "3"
members = ["benchmark", "crates/*", "packages/*"]

[workspace.package]
version = "0.12.0"
authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
categories = ["parsing", "parser-implementations"]
keywords = ["Vue", "oxc", "oxlint"]
license = "MIT"
repository = "https://github.com/liangmiQwQ/vue-oxlint-toolkit"
description = "A parser to generate semantically correct AST from Vue SFCs for code linting purposes."

edition = "2024"
rust-version = "1.92.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_truncation = { level = "allow" }
too_many_lines = { level = "allow" }

[workspace.dependencies]
criterion = "0.8.2"
insta = "1.47.2"

vue_oxlint_jsx = { path = "crates/vue_oxlint_jsx" }
vue_oxlint_parser = { path = "crates/vue_oxlint_parser" }

oxc_allocator = ">=0.127.0"
oxc_ast = ">=0.127.0"
oxc_ast_visit = ">=0.127.0"
oxc_codegen = ">=0.127.0"
oxc_diagnostics = ">=0.127.0"
oxc_parser = ">=0.127.0"
oxc_span = ">=0.127.0"
oxc_syntax = ">=0.127.0"

memchr = "2.8.0"
regex = "1.12.3"
vue-compiler-core = "0.1.0"

napi = { version = "3", features = ["napi9"] }
napi-build = "2"
napi-derive = "3"
