[package]
name = "benchmark"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[[bench]]
name = "jsx"
harness = false

[dev-dependencies]
criterion = { workspace = true }
oxc_allocator = { workspace = true }
vue_oxlint_jsx = { workspace = true }

[lints]
workspace = true
