[package]
name = "vue_oxlint_jsx"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }

memchr = { workspace = true }
regex = { workspace = true }
vue-compiler-core = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_codegen = { workspace = true }

[lints]
workspace = true
