[package]
name = "vue_oxlint_parser"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust port of vue-eslint-parser: AST types and SFC parser for Vue single-file components."

[dependencies]
oxc_allocator = { workspace = true, features = ["serialize"] }
oxc_ast = { workspace = true, features = ["serialize"] }
oxc_diagnostics = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true, features = ["serialize"] }
oxc_syntax = { workspace = true }
oxc_estree = { workspace = true, features = ["serialize"] }
oxc_estree_tokens = { workspace = true }

memchr = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
